--- a/app/src/main/resources/pages/menu.fxml
+++ b/app/src/main/resources/pages/menu.fxml
@@ -12,7 +12,7 @@
 
 <?import javafx.collections.FXCollections?>
 <?import java.lang.String?>
-<StackPane xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.unibo.controller.ControllerMenuImpl" minWidth="900" minHeight="600">
+<StackPane xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.unibo.view.controllers.menu.ControllerMenuImpl" minWidth="900" minHeight="600">
     <HBox spacing="20.0" alignment="CENTER">
         <VBox fx:id="leftSpacer" HBox.hgrow="ALWAYS"/>
         <VBox alignment="CENTER" spacing="20.0">
@@ -21,7 +21,7 @@
                     <Font size="24.0" />
                 </font>
             </Text>
-            <Button fx:id="startButton" text="START" prefWidth="200"/>
+            <Button fx:id="startButton" text="START" prefWidth="200" onAction="#handleStartAction"/>
             <VBox spacing="10">
                 <fx:define>
                     <ToggleGroup fx:id="gameModeToggleGroup"/>
@@ -53,7 +53,7 @@
                     </FXCollections>
                 </items>
             </ComboBox>
-            <Button fx:id="exitButton" text="EXIT" prefWidth="200"/>
+            <Button fx:id="exitButton" text="EXIT" prefWidth="200" onAction="#handleExitAction"/>
         </VBox>
         <VBox fx:id="rightSpacer" HBox.hgrow="ALWAYS"/>
     </HBox>
