--- a/app/src/main/resources/pages/grid.fxml
+++ b/app/src/main/resources/pages/grid.fxml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.shape.Rectangle?>
-
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.css.Style?>
 <GridPane fx:id="gridPane" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" minWidth="900" minHeight="600">
     <columnConstraints>
         <ColumnConstraints percentWidth="6.25" hgrow="ALWAYS"/>
