feat: implement the sidebar
Also:
 - set to final the classes not meant to be inherited
 - update the layout of the UI
 - update the packages' structure

 References #32

--- a/app/src/main/resources/pages/game.fxml
+++ b/app/src/main/resources/pages/game.fxml
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <?import javafx.scene.layout.*?>
-<Pane xmlns:fx="http://javafx.com/fxml">
-    <VBox>
-        <HBox>
+
+<Pane xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
+    <VBox spacing="50" style="-fx-padding: 42;">
+        <HBox VBox.vgrow="ALWAYS" spacing="80">
             <Pane fx:id="grid" VBox.vgrow="ALWAYS">
             </Pane>
             <Pane fx:id="sidebar" VBox.vgrow="ALWAYS">
             </Pane>
         </HBox>
-        <Pane fx:id="hand">
-        </Pane>
+        <HBox VBox.vgrow="ALWAYS">
+            <Pane fx:id="hand">
+            </Pane>
+        </HBox>
     </VBox>
 </Pane>
