--- a/app/src/main/resources/pages/grid.fxml
+++ b/app/src/main/resources/pages/grid.fxml
@@ -1,6 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-
 <?import javafx.scene.layout.StackPane?>
-<StackPane fx:id="container" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
+<StackPane fx:id="container" xmlns:fx="http://javafx.com/fxml">
 </StackPane>
