--- a/app/src/main/resources/pages/menu.fxml
+++ b/app/src/main/resources/pages/menu.fxml
@@ -9,10 +9,8 @@
 <?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-
 <?import javafx.collections.FXCollections?>
-<?import java.lang.String?>
-<StackPane xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
+<StackPane xmlns:fx="http://javafx.com/fxml/">
     <HBox spacing="20.0" alignment="CENTER">
         <VBox fx:id="leftSpacer" HBox.hgrow="ALWAYS"/>
         <VBox alignment="CENTER" spacing="20.0">
