--- a/app/src/main/resources/pages/style/hand.css
+++ b/app/src/main/resources/pages/style/hand.css
@@ -1,19 +1,3 @@
-.card-slot {
-    -fx-alignment: center;
-    -fx-border-color: gray;
-    -fx-border-style: solid;
-    -fx-border-width: 2;
-    -fx-min-width: 150px;
-    -fx-min-height: 200px;
-    -fx-max-height: 200px;
-    -fx-max-width: 150px;
-    -fx-background-color: lightgray;
-    -fx-padding: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
 .card {
     -fx-border-color: black;
     -fx-border-width: 1;
@@ -27,6 +11,8 @@
     -fx-background-color: lightblue;
 }
 
+.default { -fx-background-color: lightgray; }
+
 .fire { -fx-background-color: red; }
 
 .firebreak { -fx-background-color: purple; }
@@ -35,8 +21,4 @@
 
 .wind { -fx-background-color: grey; }
 
-.default {
-    -fx-background-color: transparent;
-    -fx-border-color: transparent;
-}
-
+.not-found { -fx-background-color: transparent; }
