--- a/app/src/main/resources/pages/style/hand.css
+++ b/app/src/main/resources/pages/style/hand.css
@@ -22,3 +22,5 @@
 .wind { -fx-background-color: grey; }
 
 .not-found { -fx-background-color: transparent; }
+
+.highlight {  -fx-background-color: rgba(255, 255, 0, 0.5); }
