--- a/app/src/main/resources/pages/deck.fxml
+++ b/app/src/main/resources/pages/deck.fxml
@@ -4,17 +4,17 @@
 <?import javafx.scene.layout.*?>
 
 <StackPane style="-fx-background-color: #e8d7c2; -fx-border-color: black; -fx-border-width: 2;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
-    <VBox fx:id="cardPane" alignment="CENTER" spacing="5" prefHeight="138.0" prefWidth="100.0">
-        <Button fx:id="drawButton" onAction="#handleDrawCard" prefWidth="121.0" text="Draw Card"/>
+    <VBox fx:id="deckPane" alignment="CENTER" spacing="5" prefHeight="138.0" prefWidth="100.0">
+        <Button fx:id="drawButton" prefWidth="121.0" text="Draw Card"/>
         <Spinner fx:id="numberInput" prefWidth="100">
             <valueFactory>
                 <SpinnerValueFactory.IntegerSpinnerValueFactory initialValue="1" max="5" min="1"/>
             </valueFactory>
         </Spinner>
-        <Button fx:id="discardButton" onAction="#startDiscardProcedure" prefWidth="121.0" text="Discard Card"/>
+        <Button fx:id="discardButton" prefWidth="121.0" text="Discard Card"/>
         <HBox alignment="CENTER" spacing="5">
-            <Button fx:id="okButton" onAction="#discard" text="OK"/>
-            <Button fx:id="cancelButton" onAction="#cancel" text="Cancel"/>
+            <Button fx:id="okButton" text="OK"/>
+            <Button fx:id="cancelButton" text="Cancel"/>
         </HBox>
     </VBox>
 </StackPane>
