--- a/app/src/main/resources/pages/game.fxml
+++ b/app/src/main/resources/pages/game.fxml
@@ -2,7 +2,7 @@
 
 <?import javafx.scene.layout.*?>
 
-<Pane xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
+<Pane stylesheets="@style/game.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
     <VBox spacing="50" style="-fx-padding: 42;">
         <HBox VBox.vgrow="ALWAYS" spacing="80">
             <Pane fx:id="grid" VBox.vgrow="ALWAYS">
