--- a/app/src/main/resources/pages/deck.fxml
+++ b/app/src/main/resources/pages/deck.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<StackPane style="-fx-background-color: #e8d7c2; -fx-border-color: black; -fx-border-width: 2;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
+<StackPane styleClass="sidebarPane" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
     <VBox fx:id="deckPane" alignment="CENTER" spacing="5" prefHeight="138.0" prefWidth="100.0">
         <Button fx:id="drawButton" prefWidth="121.0" text="Draw Card"/>
         <Spinner fx:id="numberInput" prefWidth="100">
