--- a/app/src/main/resources/pages/gameInfo.fxml
+++ b/app/src/main/resources/pages/gameInfo.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.control.*?>
 
-<GridPane prefHeight="150" prefWidth="150" style="-fx-background-color: #e8d7c2; -fx-border-color: black; -fx-border-width: 2;"
+<GridPane prefHeight="150" prefWidth="150" styleClass="sidebarPane"
           xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
     <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
@@ -22,7 +22,7 @@
     <BorderPane style="-fx-padding: 0 42 12 42;" GridPane.columnIndex="1">
         <center>
             <Pane BorderPane.alignment="CENTER">
-                <StackPane style="-fx-background-color: #e8d7c2; -fx-border-color: black; -fx-border-width: 2;"
+                <StackPane styleClass="sidebarPane"
                            fx:id="dicePane" layoutX="35.0" layoutY="35.0" prefHeight="75" prefWidth="75" />
             </Pane>
         </center>
