--- a/app/src/main/resources/pages/style/game.css
+++ b/app/src/main/resources/pages/style/game.css
@@ -1,3 +1,12 @@
 .disabled {
-    -fx-background-color: #353027;
+    -fx-background-color: #efefef;
+}
+
+.enabled {
+    -fx-background-color: #e8d7c2;
+}
+
+.sidebarPane {
+    -fx-border-color: black;
+    -fx-border-width: 2;
 }
