--- a/src/main/resources/pages/deck.fxml
+++ b/src/main/resources/pages/deck.fxml
@@ -4,11 +4,13 @@
 <?import javafx.scene.layout.*?>
 
 <StackPane styleClass="sidebarPane" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
-    <VBox fx:id="deckPane" alignment="CENTER" spacing="5" prefHeight="138.0" prefWidth="100.0">
-        <Button fx:id="discardButton" prefWidth="121.0" text="Discard Card"/>
-        <HBox alignment="CENTER" spacing="5">
-            <Button fx:id="okButton" text="OK"/>
-            <Button fx:id="cancelButton" text="Cancel"/>
-        </HBox>
-    </VBox>
+    <StackPane style="-fx-padding: 10 31 10 31;">
+        <VBox fx:id="deckPane" alignment="CENTER" spacing="5" prefHeight="138.0" prefWidth="138.0">
+            <Button fx:id="discardButton" prefWidth="121.0" text="Discard Card"/>
+            <HBox alignment="CENTER" spacing="5">
+                <Button fx:id="okButton" text="OK"/>
+                <Button fx:id="cancelButton" text="Cancel"/>
+            </HBox>
+        </VBox>
+    </StackPane>
 </StackPane>
