--- a/src/main/resources/pages/deck.fxml
+++ b/src/main/resources/pages/deck.fxml
@@ -3,9 +3,9 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<StackPane styleClass="sidebarPane" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
+<StackPane fx:id="deckPane" styleClass="sidebarPane" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
     <StackPane style="-fx-padding: 10 31 10 31;">
-        <VBox fx:id="deckPane" alignment="CENTER" spacing="5" prefHeight="80.0" prefWidth="138.0">
+        <VBox alignment="CENTER" spacing="5" prefHeight="80.0" prefWidth="138.0">
             <Button fx:id="discardButton" prefWidth="121.0" text="Discard Card"/>
             <HBox alignment="CENTER" spacing="5">
                 <Button fx:id="okButton" text="OK"/>
